debt/MET-7033_improve_execution_claiming (#26)
* MET-7033 Simplify workflow executor by moving semaphore check in dispatcher before db execution claiming

* MET-7033 Use generic type where AbstractMetisPlugin is used

* MET-7033 Keep RUNNING state for a workflow that already started but in between steps.

Also use new started date per plugin, no need the date of first to be the date of workflow execution start.

* MET-7033 Robuster update date, more fair claiming

* MET-7033 Fix plugin type matching warning on test

* MET-7033 Cleanup and lombok

* MET-7033 Update db workflow execution when start and independent finished date

* MET-7033 Cleanup

* MET-7033 Add tests

* MET-7033 Cleanup

* MET-7033 Update keycloak token timeouts

* MET-7033 Process review