@@ -26,11 +26,18 @@ import eu.europeana.metis.core.user.User.UserBuilder;
 import eu.europeana.metis.core.workflow.Workflow;
 import eu.europeana.metis.core.workflow.WorkflowExecution;
 import eu.europeana.metis.core.workflow.WorkflowStatus;
+import eu.europeana.metis.core.workflow.plugins.AbstractExecutablePlugin;
 import eu.europeana.metis.core.workflow.plugins.AbstractExecutablePluginMetadata;
 import eu.europeana.metis.core.workflow.plugins.AbstractMetisPlugin;
+import eu.europeana.metis.core.workflow.plugins.DepublishPluginMetadata;
 import eu.europeana.metis.core.workflow.plugins.EnrichmentPluginMetadata;
 import eu.europeana.metis.core.workflow.plugins.ExecutablePluginFactory;
+import eu.europeana.metis.core.workflow.plugins.ExecutablePluginType;
+import eu.europeana.metis.core.workflow.plugins.HTTPHarvestPluginMetadata;
+import eu.europeana.metis.core.workflow.plugins.IndexToPreviewPluginMetadata;
+import eu.europeana.metis.core.workflow.plugins.IndexToPublishPluginMetadata;
 import eu.europeana.metis.core.workflow.plugins.LinkCheckingPluginMetadata;
+import eu.europeana.metis.core.workflow.plugins.MediaProcessPluginMetadata;
 import eu.europeana.metis.core.workflow.plugins.NormalizationPluginMetadata;
 import eu.europeana.metis.core.workflow.plugins.OaipmhHarvestPluginMetadata;
 import eu.europeana.metis.core.workflow.plugins.TransformationPluginMetadata;
@@ -42,7 +49,6 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import org.bson.types.ObjectId;
 
 public class TestObjectFactory {
@@ -64,58 +70,40 @@ public class TestObjectFactory {
   }
 
   /**
-   * Create dummy workflow
+   * Create a dummy workflow
    *
    * @return the created workflow
    */
   public static Workflow createWorkflowObject() {
     Workflow workflow = new Workflow();
     workflow.setDatasetId(Integer.toString(DATASETID));
-    OaipmhHarvestPluginMetadata oaipmhHarvestPluginMetadata = new OaipmhHarvestPluginMetadata();
-    oaipmhHarvestPluginMetadata.setUrl("http://example.com");
-    oaipmhHarvestPluginMetadata.setEnabled(true);
-    ValidationExternalPluginMetadata validationExternalPluginMetadata = new ValidationExternalPluginMetadata();
-    validationExternalPluginMetadata.setEnabled(true);
-    TransformationPluginMetadata transformationPluginMetadata = new TransformationPluginMetadata();
-    transformationPluginMetadata.setEnabled(true);
-    ValidationInternalPluginMetadata validationInternalPluginMetadata = new ValidationInternalPluginMetadata();
-    validationInternalPluginMetadata.setEnabled(true);
-    NormalizationPluginMetadata normalizationPluginMetadata = new NormalizationPluginMetadata();
-    normalizationPluginMetadata.setEnabled(true);
-    LinkCheckingPluginMetadata linkCheckingPluginMetadata = new LinkCheckingPluginMetadata();
-    linkCheckingPluginMetadata.setEnabled(true);
-    EnrichmentPluginMetadata enrichmentPluginMetadata = new EnrichmentPluginMetadata();
-    enrichmentPluginMetadata.setEnabled(true);
-
-    List<AbstractExecutablePluginMetadata> abstractMetisPluginMetadata = new ArrayList<>();
-    abstractMetisPluginMetadata.add(oaipmhHarvestPluginMetadata);
-    abstractMetisPluginMetadata.add(validationExternalPluginMetadata);
-    abstractMetisPluginMetadata.add(transformationPluginMetadata);
-    abstractMetisPluginMetadata.add(validationInternalPluginMetadata);
-    abstractMetisPluginMetadata.add(normalizationPluginMetadata);
-    abstractMetisPluginMetadata.add(linkCheckingPluginMetadata);
-    abstractMetisPluginMetadata.add(enrichmentPluginMetadata);
-    workflow.setMetisPluginsMetadata(abstractMetisPluginMetadata);
+    List<AbstractExecutablePluginMetadata> abstractExecutablePluginMetadata = List.of(
+        enableMetadata(new OaipmhHarvestPluginMetadata()),
+        enableMetadata(new ValidationExternalPluginMetadata()),
+        enableMetadata(new TransformationPluginMetadata()),
+        enableMetadata(new ValidationInternalPluginMetadata()),
+        enableMetadata(new NormalizationPluginMetadata()),
+        enableMetadata(new LinkCheckingPluginMetadata()),
+        enableMetadata(new EnrichmentPluginMetadata())
+    );
+    workflow.setMetisPluginsMetadata(abstractExecutablePluginMetadata);
 
     return workflow;
   }
 
-  /**
-   * Create dummy workflow execution
-   *
-   * @return the created workflow execution
-   */
-  public static WorkflowExecution createWorkflowExecutionObject() {
+  private static <T extends AbstractExecutablePluginMetadata> T enableMetadata(T abstractExecutablePluginMetadata) {
+    abstractExecutablePluginMetadata.setEnabled(true);
+    return abstractExecutablePluginMetadata;
+  }
+
+  public static WorkflowExecution createWorkflowExecutionObject(ExecutablePluginType executablePluginType) {
     Dataset dataset = createDataset(DATASETNAME);
-    ArrayList<AbstractMetisPlugin> abstractMetisPlugins = new ArrayList<>();
-    AbstractMetisPlugin oaipmhHarvestPlugin = ExecutablePluginFactory
-        .createPlugin(new OaipmhHarvestPluginMetadata());
-    abstractMetisPlugins.add(oaipmhHarvestPlugin);
-    AbstractMetisPlugin validationExternalPlugin = ExecutablePluginFactory
-        .createPlugin(new ValidationExternalPluginMetadata());
-    abstractMetisPlugins.add(validationExternalPlugin);
+    ArrayList<AbstractMetisPlugin<?>> abstractMetisPlugins = new ArrayList<>();
+    AbstractExecutablePlugin<?> executablePlugin = createExecutablePlugin(executablePluginType);
+    abstractMetisPlugins.add(executablePlugin);
 
     WorkflowExecution workflowExecution = new WorkflowExecution();
+    workflowExecution.setNextExecutablePluginType(executablePluginType);
     workflowExecution.setDatasetId(dataset.getDatasetId());
     workflowExecution.setEcloudDatasetId(dataset.getEcloudDatasetId());
     workflowExecution.setMetisPlugins(abstractMetisPlugins);
@@ -126,15 +114,52 @@ public class TestObjectFactory {
     return workflowExecution;
   }
 
-  public static WorkflowExecution createWorkflowExecutionObject(Dataset dataset) {
-    WorkflowExecution workflowExecution = new WorkflowExecution();
-    workflowExecution.setDatasetId(dataset.getDatasetId());
-    workflowExecution.setEcloudDatasetId(dataset.getEcloudDatasetId());
-    workflowExecution.setMetisPlugins(new ArrayList<>());
-    workflowExecution.setWorkflowStatus(WorkflowStatus.INQUEUE);
-    workflowExecution.setCreatedDate(new Date());
+  public static AbstractExecutablePlugin<?> createExecutablePlugin(ExecutablePluginType type) {
+    return ExecutablePluginFactory.createPlugin(switch (type) {
+      case HTTP_HARVEST -> new HTTPHarvestPluginMetadata();
+      case OAIPMH_HARVEST -> new OaipmhHarvestPluginMetadata();
+      case ENRICHMENT -> new EnrichmentPluginMetadata();
+      case MEDIA_PROCESS -> new MediaProcessPluginMetadata();
+      case LINK_CHECKING -> new LinkCheckingPluginMetadata();
+      case VALIDATION_EXTERNAL -> new ValidationExternalPluginMetadata();
+      case TRANSFORMATION -> new TransformationPluginMetadata();
+      case VALIDATION_INTERNAL -> new ValidationInternalPluginMetadata();
+      case NORMALIZATION -> new NormalizationPluginMetadata();
+      case PREVIEW -> new IndexToPreviewPluginMetadata();
+      case PUBLISH -> new IndexToPublishPluginMetadata();
+      case DEPUBLISH -> new DepublishPluginMetadata();
+    });
+  }
 
+  /**
+   * Create dummy workflow execution
+   *
+   * @return the created workflow execution
+   */
+  public static WorkflowExecution createWorkflowExecutionObject() {
+    Dataset dataset = createDataset(DATASETNAME);
+    ArrayList<AbstractMetisPlugin<?>> abstractMetisPlugins = new ArrayList<>();
+    AbstractMetisPlugin<?> oaipmhHarvestPlugin = ExecutablePluginFactory
+        .createPlugin(new OaipmhHarvestPluginMetadata());
+    abstractMetisPlugins.add(oaipmhHarvestPlugin);
+    AbstractMetisPlugin<?> validationExternalPlugin = ExecutablePluginFactory
+        .createPlugin(new ValidationExternalPluginMetadata());
+    abstractMetisPlugins.add(validationExternalPlugin);
+
+    WorkflowExecution workflowExecution = createWorkflowExecutionObject(dataset);
+    workflowExecution.setNextExecutablePluginType(ExecutablePluginType.OAIPMH_HARVEST);
+    workflowExecution.setMetisPlugins(abstractMetisPlugins);
     return workflowExecution;
+  }
+
+  public static WorkflowExecution createWorkflowExecutionObject(Dataset dataset) {
+    WorkflowExecution execution = new WorkflowExecution();
+    execution.setDatasetId(dataset.getDatasetId());
+    execution.setEcloudDatasetId(dataset.getEcloudDatasetId());
+    execution.setWorkflowStatus(WorkflowStatus.INQUEUE);
+    execution.setCreatedDate(new Date());
+    execution.setId(new ObjectId());
+    return execution;
   }
 
   /**
@@ -232,7 +257,6 @@ public class TestObjectFactory {
         .lastName("lastName")
         .issuedAt(Instant.now())
         .build();
-
   }
 
   /**
@@ -245,29 +269,20 @@ public class TestObjectFactory {
         "additional info", "europeanaId", 0L);
     SubTaskInfo subTaskInfo2 = new SubTaskInfo(2, "some_resource_id2", RecordState.SUCCESS, "info",
         "additional info", "europeanaId", 0L);
-    ArrayList<SubTaskInfo> subTaskInfos = new ArrayList<>();
-    subTaskInfos.add(subTaskInfo1);
-    subTaskInfos.add(subTaskInfo2);
-    return subTaskInfos;
+    return List.of(subTaskInfo1, subTaskInfo2);
   }
 
   public static List<DataItemStatus> createExternalRecordStatusList() {
-    List<SubTaskInfo> listOfSubTaskInfo = createListOfSubTaskInfo();
-
-    List<DataItemStatus> dataItemStatusList = new ArrayList<>();
-    for (SubTaskInfo subTaskInfo : listOfSubTaskInfo) {
-      DataItemStatus dataItemStatus = new DataItemStatus(
-          subTaskInfo.getResourceNum(),
-          subTaskInfo.getResource(),
-          DataItemState.valueOf(subTaskInfo.getRecordState().name()),
-          subTaskInfo.getInfo(),
-          subTaskInfo.getEuropeanaId(),
-          subTaskInfo.getProcessingTime(),
-          subTaskInfo.getResultResource());
-      dataItemStatusList.add(dataItemStatus);
-    }
-    return dataItemStatusList;
-
+    return createListOfSubTaskInfo().stream()
+                                    .map(subTaskInfo -> new DataItemStatus(
+                                        subTaskInfo.getResourceNum(),
+                                        subTaskInfo.getResource(),
+                                        DataItemState.valueOf(subTaskInfo.getRecordState().name()),
+                                        subTaskInfo.getInfo(),
+                                        subTaskInfo.getEuropeanaId(),
+                                        subTaskInfo.getProcessingTime(),
+                                        subTaskInfo.getResultResource()))
+                                    .toList();
   }
 
   /**
@@ -340,7 +355,7 @@ public class TestObjectFactory {
       }
       return new EngineTaskErrorInfo(taskErrorInfo.getErrorType(), taskErrorInfo.getMessage(),
           taskErrorInfo.getOccurrences(), engineTaskErrorDetailsList);
-    }).collect(Collectors.toList());
+    }).toList();
     return new EngineTaskErrors(Long.toString(taskErrorsInfo.getId()), engineTaskErrorInfoList);
   }
 
